introducing a very flexible property mechanism for the new smt translation.
It is not working yet!